# json-sig

./: json-sig.cabal  shell.nix
exe/: json-sig.hs
lib/: JSONSIG.hs
